Fix wheel text alignments

--- a/components/icon/index.css
+++ b/components/icon/index.css
@@ -12,7 +12,7 @@
 
   color: var(--background);
   background-color: var(--color);
-  border-radius: calc(20rem / 16);
+  border-radius: 50%;
   transform-origin: 50% 50%;
   transition: transform 175ms var(--snap);
   will-change: transform;
